-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 25
-
Component/s: client-libs
-
b07
-
windows
To be able to properly support static builds on Windows in JDK-8346377, we cannot use DllMain, for two reasons:
1) This is not called for statically linked libraries, and
2) There are multiple DllMain definitions throughout the JDK native libraries, causing name collisions.
While it could have been possible to keep the DllMain function for non-static builds and just use an alternative solution for static builds, I think it is preferable to have a single solution that works as well for both static and dynamic builds.
1) This is not called for statically linked libraries, and
2) There are multiple DllMain definitions throughout the JDK native libraries, causing name collisions.
While it could have been possible to keep the DllMain function for non-static builds and just use an alternative solution for static builds, I think it is preferable to have a single solution that works as well for both static and dynamic builds.
- blocks
-
JDK-8346377 Properly support static builds for Windows
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jdk/893d00ac
-
Review(master)
openjdk/jdk/22790