8346388: Cannot use DllMain in libawt for static builds