src/java.desktop/windows/native/libawt/windows/GDIHashtable.h
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1999, 2008, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1999, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -166,6 +166,14 @@ class GDIHashtable : public Hashtable {
     }
 
     ~GDIHashtable() {
+#ifdef DEBUG
+        // The destructor of a static object is called at process shutdown or dll
+        // unloading. The JVM is not available for the raw monitors at that time,
+        // so we need to stop locking before continuing.
+        DTrace_DisableMutex();
+        DMem_DisableMutex();
+#endif
+
         manager.remove(this);
     }
 
